<resources>
    <string name="app_name">Pakete</string>
    <string name="action_settings">Settings</string>
    <string name="google_app_id">pakete-e8b2b</string>
    <string name="facebook_app_id">1729225590666670</string>
    <string name="app_url">http://pakete.ph</string>

    <!-- Couriers -->
    <string name="title_activity_couriers">Couriers</string>

    <!-- Add Package -->
    <string name="title_activity_add_package">Add Package</string>
    <string name="edit_text_tracking_number_hint">Tracking Number</string>
    <string name="edit_text_name_hint">Description</string>

    <!-- Settings -->
    <string name="title_activity_settings">Settings</string>
    <string name="header_text_remove_ads">We may be an ad-supported app, but we understand some would prefer Pakete without ads. Get an ad-free experience and help bring new features to the app for only %1$s. A single purchase works across all of your Android devices forever. We appreciate your support!</string>
    <string name="button_text_remove_ads">Remove Ads</string>
    <string name="header_text_support">We\'d love to know how we can make Pakete even better and would appreciate if you leave a review on the Play Store.</string>
    <string name="button_text_rate_pakete">Rate Pakete</string>
    <string name="button_text_contact_the_pakete_team">Contact the Pakete Team</string>
    <string name="header_text_tell_your_friends">Tell your Friends</string>
    <string name="button_text_tweet_about_pakete">Tweet about Pakete</string>
    <string name="button_text_tell_your_friends_about_pakete">Tell your friends about Pakete</string>

    <!-- Sort By -->
    <string name="title_activity_sort_by">Sort By</string>

    <!-- Share Messages -->
    <string name="share_message">Checkout Pakete - a free PH Package Tracking app that I use to track my packages</string>

    <!-- App rate -->
    <string name="rate_dialog_title">Rate Pakete</string>
    <string name="rate_dialog_message">If you enjoy using Pakete, would you mind taking a moment to rate it? Thanks for your support!</string>
    <string name="rate_dialog_ok">Rate It Now</string>
    <string name="rate_dialog_cancel">Remind Me Later</string>
    <string name="rate_dialog_no">No, Thanks</string>

</resources>
