<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:clickable="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        tools:context="ph.pakete.view.AddPackageActivity">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:title="@string/title_activity_add_package"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_below="@id/toolbar"
            android:animateLayoutChanges="true">


            <EditText
                android:id="@+id/edit_text_tracking_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_text_tracking_number_hint"
                android:imeOptions="actionNext"
                android:inputType="text" />

            <EditText
                android:id="@+id/edit_text_extra_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edit_text_tracking_number"
                android:imeOptions="actionNext"
                android:visibility="invisible"
                android:inputType="text" />

            <EditText
                android:id="@+id/edit_text_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edit_text_tracking_number"
                android:hint="@string/edit_text_name_hint"
                android:imeOptions="actionDone"
                android:inputType="text" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Add Package"
                android:id="@+id/button_add_package"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/edit_text_name"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Archive Package"
                android:textColor="@color/white"
                android:id="@+id/button_archive_package"
                android:layout_centerHorizontal="true"
                android:visibility="invisible"
                android:layout_below="@id/button_add_package"/>

        </RelativeLayout>
    </RelativeLayout>

</layout>
